--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,44 +1,44 @@
-<div class="community-index">
+<div class="shared-wrapper">
   <%= render 'shared/header'%>
-    <div class="community-wrapper">
-      <div class="search-form">
-        <h2 class="search-community-title">コミュニティを検索！</h2>
-        <div class="community-form">
-        <%= form_with url:  search_communities_path, method: :get, id: "search-form" do |f| %>
-        <%= f.text_field :keyword, class: "form-input-area", id: "search-input" %>
-        <%= f.submit '検索する', class: "form-submit-btn" %>
-        <% end %>
-        </div>
-      </div>
-      <div class="search-result" id="search-result">
-      </div>
-      <div class="create-community">
-        <h2 class="create-title">コミュニティを作成しよう!</h2>
-        <% if user_signed_in? %>
-        <div class="community-form">
-          <%= form_with model: @community, id: "community-form" do |f| %>
-          <%= f.label :name, "コミュ二ティの名前", class: "form-label-name" %><span class="form-warning">必須</span>
-          <%= f.text_field :name, placeholder: "渋谷駅周辺の居酒屋", class: "form-input-area", id: "community-input"%>
-          <%= f.submit '作成する', class: "form-submit-btn" %>
-          <% end %>
-        </div>
-        <% else %>
-        <div class="community-sign-in">
-          <h4 class="sign-in-title">コミュニティ作成にはログインが必要です!</h4>
-          <div class="sign-in-links">
-            <%= link_to 'ログイン', new_user_session_path, class: "sign-in-link"%>
-            <%= link_to '新規登録',  new_user_registration_path , class: "sign-in-link"%>
-          </div>
-        </div>
+  <div class="shared-main">
+    <div class="search-form">
+      <h2 class="search-community-title">コミュニティを検索！</h2>
+      <div class="community-form">
+      <%= form_with url:  search_communities_path, method: :get, id: "search-form" do |f| %>
+      <%= f.text_field :keyword, class: "form-input-area", id: "search-input" %>
+      <%= f.submit '検索する', class: "form-submit-btn" %>
       <% end %>
       </div>
-      <div class="community-lists">
-        <div class="community-lists-title">
-          <h2 id="community-count">コミュニティ一覧</h2>
-        </div>
-        <%= render partial: 'communities/community_table', locals: {communities: @communities} %>
-        <%= paginate @communities, param_name: 'community_page' %>
-      </div>
     </div>
+    <div class="search-result" id="search-result">
+    </div>
+    <div class="create-community">
+      <h2 class="create-title">コミュニティを作成しよう!</h2>
+      <% if user_signed_in? %>
+      <div class="community-form">
+        <%= form_with model: @community, id: "community-form" do |f| %>
+        <%= f.label :name, "コミュ二ティの名前", class: "form-label-name" %><span class="form-warning">必須</span>
+        <%= f.text_field :name, placeholder: "渋谷駅周辺の居酒屋", class: "form-input-area", id: "community-input"%>
+        <%= f.submit '作成する', class: "form-submit-btn" %>
+        <% end %>
+      </div>
+      <% else %>
+      <div class="community-sign-in">
+        <h4 class="sign-in-title">コミュニティ作成にはログインが必要です!</h4>
+        <div class="sign-in-links">
+          <%= link_to 'ログイン', new_user_session_path, class: "sign-in-link"%>
+          <%= link_to '新規登録',  new_user_registration_path , class: "sign-in-link"%>
+        </div>
+      </div>
+    <% end %>
+    </div>
+    <div class="community-lists">
+      <div class="community-lists-title">
+        <h2 id="community-count">コミュニティ一覧</h2>
+      </div>
+      <%= render partial: 'users/community_table', locals: {communities: @communities} %>
+      <%= paginate @communities, param_name: 'community_page' %>
+    </div>
+  </div>
   <%= render "shared/second_footer" %>
 </div>
