--- a/app/views/communities/search.js.erb
+++ b/app/views/communities/search.js.erb
@@ -6,7 +6,7 @@
   const HTML = `
   <div id="search-result-first">
     <h2 class="search-community-title"><%="検索結果！(#{@search_communities.length}個)" %></h2>
-    <%= render partial: 'communities/community_table', locals: {communities: @search_communities} %>
+    <%= render partial: 'users/community_table', locals: {communities: @search_communities} %>
   </div>  
   `;
 
