--- a/app/views/messages/_message_community.html.erb
+++ b/app/views/messages/_message_community.html.erb
@@ -1,3 +1,4 @@
+<%# message/index, favorites/create.js.erbで適用 %>
 <div class="message-community", id="favorite-<%= community.id %>" >
   <%= link_to community.name, community_messages_path(community) %>
 </div>
