--- a/app/assets/stylesheets/users/show.css
+++ b/app/assets/stylesheets/users/show.css
@@ -1,18 +1,4 @@
-.user-show {
-  width: 100%;
-  height: 100%;
-  background-color: #f5f5f5;
-}
-
-.user-wrapper {
-  width: 80%;
-  margin: 0 auto;
-  background-color: white;
-  margin-top: 50px;
-  padding: 30px;
-}
-
-.user-infobox {
+.user-info-box {
   width: 100%;
 }
 
@@ -22,29 +8,6 @@
 
 .user-info {
   display: flex;
-}
-
-.table {
-  width: 60%;
-  border-collapse: collapse;
-}
-
-.table-column1 {
-  text-align: left;
-  font-size: bold;
-  background: #fafafa;
-  border-collapse: collapse;
-  border: 1px solid #f5f5f5;
-  width: 30%;
-  padding: 8px;
-}
-
-.table-column2 {
-  text-align: left;
-  border: 1px solid #f5f5f5;
-  border-collapse: collapse;
-  width: 70%;
-  padding: 16px 8px;
 }
 
 .user-links {
@@ -90,10 +53,51 @@
   margin-bottom: 20px;
 }
 
+/* テーブル関係 */
+.user-table {
+  width: 60%;
+  border-collapse: collapse;
+}
+
 .store-table {
   width: 100%;
   border-collapse: collapse;
 }
+
+.table-link {
+  float: left;
+  margin-right: 55px;
+  background-color: lightskyblue;
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.community-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 50px;
+}
+
+.table-column1 {
+  text-align: left;
+  font-size: bold;
+  background: #fafafa;
+  border-collapse: collapse;
+  border: 1px solid #f5f5f5;
+  width: 30%;
+  padding: 8px;
+}
+
+.table-column2 {
+  text-align: left;
+  border: 1px solid #f5f5f5;
+  border-collapse: collapse;
+  width: 70%;
+  padding: 16px 8px;
+}
+
 
 .table-column3 {
   text-align: left;
@@ -131,29 +135,4 @@
   border: 1px solid #f5f5f5;
   width: 40%;
   padding: 8px;
-}
-
-.store-table-link {
-  float: left;
-  margin-right: 55px;
-  background-color: lightskyblue;
-  color: white;
-  font-weight: bold;
-  border-radius: 10px;
-  padding: 5px;
-}
-
-/* ページネーションで適用 */
-.pagination {
-  text-align: center;
-  font-weight: bold;
-  margin-top: 20px;
-}
-
-.pagination a {
-  color: gray;
-}
-
-.page {
-  padding: 0 10px;
 }
