--- a/app/views/communities/_community_table_record.html.erb
+++ b/app/views/communities/_community_table_record.html.erb
@@ -4,10 +4,10 @@
   <td class="table-column4"><%= community.name %></td>
   <td class="table-column4"><%= community.messages.length %></td>
   <td class="table-column6">
-    <%= link_to '詳細ページへ', community_messages_path(community), class: "community-table-link" %>
+    <%= link_to '詳細ページへ', community_messages_path(community), class: "table-link" %>
     <% if user_signed_in? && current_user.id == community.user_id %>
-    <%= link_to '編集する', edit_community_path(community),class: "community-table-link" %>
-    <%= link_to '削除する', community_path(community), method: :delete, class: "community-table-link" %>
+    <%= link_to '編集する', edit_community_path(community),class: "table-link" %>
+    <%= link_to '削除する', community_path(community), method: :delete, class: "table-link" %>
     <% end %>
   </td>  
 </tr>
