--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,6 +1,6 @@
-<div class="store-show">
+ <div class="shared-wrapper">
   <%= render 'shared/header'%>
-  <div class="store-wrapper">
+  <div class="shared-main">
     <div class="store-box">
       <div class="store-title">
         <div class="store-name">
@@ -66,7 +66,6 @@
               <%= f.file_field :comment_images, multiple: true, name: "comment[comment_images][]",  class: "form-image-btn", id: "comment-images" %>
             </div>        
           </div>
-          <div class="image-list", id="image-list"></div>      
           <div class="form-group">
             <div class="form-submit">
               <%= f.submit "コメントする", class: "form-submit-btn" %>
