--- a/app/views/users/favorite.html.erb
+++ b/app/views/users/favorite.html.erb
@@ -1,6 +1,6 @@
-<div class="user-show">
+<div class="shared-wrapper">
  <%= render 'shared/header'%>
-  <div class="user-wrapper">
+  <div class="shared-main">
     <div class="user-store-wrapper"> 
       <div class="user-store-title">
         <h2><%= "#{current_user.nickname}さんのお気に入り店舗一覧" %></h2>
@@ -12,7 +12,7 @@
       <div class="user-store-title">
         <h2><%= "#{current_user.nickname}さんのお気に入りコミュニティ一覧"%></h2>
       </div>
-      <%= render partial: 'communities/community_table', locals: {communities: @favorite_communities} %>
+      <%= render partial: 'community_table', locals: {communities: @favorite_communities} %>
       <%= paginate @favorite_communities, param_name: 'favorite_page' %>
     </div>
   </div>
