--- a/app/views/stores/_store_form.html.erb
+++ b/app/views/stores/_store_form.html.erb
@@ -65,19 +65,11 @@
         <%= f.label :store_images, "画像", class: "form-label-name" %><span class="form-any">任意(複数枚可）</span>
       </div> 
       <div class="form-input"> 
-        <%= f.file_field :store_images, multiple: true, name: "store[store_images][]",  class: "form-image-btn", id: "store_images" %>
+        <%= f.file_field :store_images, multiple: true, class: "form-image-btn", id: "store_images" %>
       </div>
     </div>
     <%# stores/newの場合 %>
     <% if params[:action] == "new" %>
-    <div class="form-group">
-      <div class="form-label">
-        <%= f.label :store_images, "画像", class: "form-label-name" %><span class="form-any">任意(複数枚可）</span>
-      </div> 
-      <div class="form-input"> 
-        <%= f.file_field :store_images, name: "store[store_images][]", multiple: true,   class: "form-image-btn", id: "store_images" %>
-      </div>
-    </div>  
     <div class="form-group">
       <div class="form-submit">
         <%= f.submit "店舗登録", class: "form-submit-btn" %>
