--- a/app/views/communities/search.js.erb
+++ b/app/views/communities/search.js.erb
@@ -3,14 +3,7 @@
   if (searchResultFirst) {
   searchResultFirst.remove();
   }
-  const HTML = `
-  <div id="search-result-first">
-    <h2 class="search-community-title"><%="検索結果！(#{@search_communities.length}個)" %></h2>
-    <%= render partial: 'users/community_table', locals: {communities: @search_communities} %>
-  </div>  
-  `;
-
   const searchResult = document.getElementById("search-result");
-  searchResult.insertAdjacentHTML('afterbegin', HTML);
+  searchResult.insertAdjacentHTML('afterbegin', `<%= render partial: 'search_community', locals: {search_communities: @search_communities} %>`);
   document.getElementById("search-input").value = "";
 })();
