--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="shared-wrappe">
+<div class="shared-wrrappe">
  <%= render 'shared/header'%>
   <div class="shared-main">
     <div class="user-info-box">
@@ -8,7 +8,7 @@
         <div class="user-links">
           <%= link_to 'ユーザー情報編集', edit_user_path(current_user), class: "user-link"%>
           <%= link_to 'プロフィール情報編集', edit_user_profile_path(current_user, current_user.profile), class: "user-link"%>
-          <%= link_to 'アカウント削除', user_path(current_user), method: :delete,  class: "user-link"%>
+          <%= link_to 'アカウント削除', user_path(current_user), method: :delete,  class: "user-link" %>
         </div>
       </div>  
     </div>
@@ -17,7 +17,7 @@
         <h2><%="#{current_user.nickname}さんの周辺地図" %></h2>
       </div>  
       <div id="user-map"></div>
-      <script>let mapInstance</script>
+      <script >let mapInstance</script>
     </div>
     <div class="user-store-wrapper"> 
       <div class="user-store-title">
