--- a/app/assets/stylesheets/stores/index.css
+++ b/app/assets/stylesheets/stores/index.css
@@ -2,7 +2,7 @@
   height: calc(100vh - 100px);
   width: 100％;
   display: flex;
-  background-color: rgba(255, 255, 255, 0.938);
+  background-image:linear-gradient(-45deg, #dfdfdf 25%, #f9f8f7 25%, #f9f8f7 50%, #dfdfdf  50%, #dfdfdf 75%, #f9f8f7 75%, #f9f8f7);
 }
 
 .map-wrapper {
@@ -18,6 +18,13 @@
 }
 
 .search-title {
+  margin-right: 10px;
+  font-style: italic;
+  border-bottom: 2px solid black;
+}
+
+.fa-search-location {
+  font-size: 25px;
   margin-right: 10px;
 }
 
@@ -40,32 +47,51 @@
   height: calc(100vh - 100px);
 }
 
-.store-content {
+.content {
   height: 50%;
 }
 
-.store-message {
-  height: 30%;
+.content-message {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  font-style: italic;
+  font-weight: bold;
 }
 
-.store-message-title {
-  padding: 30px 0 10px;
+.upper {
+  padding-top: 30px;
 }
 
-.store-link {
-  height: 70%;
+.content-message-title {
+  border-bottom: 2px solid black;
+}
+
+.content-text {
+  padding: 10px 0;
+}
+
+.fa-glass-cheers {
+  font-size: 100px;
+  color: lightcoral;
+}
+
+.fa-users {
+  font-size: 100px;
+  color: lightsalmon;
+}
+
+.content-link {
+  padding-top: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.store-btn {
+.content-btn {
   border: 1px solid lightgray;
-  padding: 30px;
+  padding: 20px;
   background-color: lightskyblue;
   color: white;
   font-weight: bold;
@@ -74,39 +100,3 @@
   width: 75%;
   text-align: center;
 }
-
-.community-content {
-  height: 50%;
-}
-
-.community-message {
-  height: 30%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.community-message-title {
-  padding: 30px 0 10px;
-}
-
-.community-link {
-  height: 70%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.community-btn {
-  border: 1px solid lightgray;
-  padding: 30px;
-  background-color: lightskyblue;
-  color: white;
-  font-weight: bold;
-  font-size: 24px;
-  border-radius: 20px;
-  width: 75%;
-  text-align: center;
-}
-
