--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -2,9 +2,10 @@
 <div class="wrapper">
   <div class="map-wrapper">
     <div class="form-map">
+    <i class="fas fa-search-location fa-flip-horizontal"></i>
     <h2 class="search-title">住所を検索して見よう！</h2>
     <%= form_with url: search_map_stores_path, method: :get, id: "search-form" do |f| %>
-      <%= f.text_field :address, class: "form-input-area"%>
+      <%= f.text_field :address, placeholder: "例: 東京都渋谷区神南１−１−１",  class: "form-input-area"%>
       <%= f.submit '地図検索', class: "form-submit-btn" %>
     <% end %>  
     </div>
@@ -14,22 +15,24 @@
     </div>
   </div>
   <div class="contents">
-    <div class="store-content">
-      <div class="store-message">
-        <h2 class="store-message-title">お気に入りの飲食店を登録しよう！</h2>
-        <p class="store-text">自分のお気に入りの店舗を登録できます、登録してシェアしましょう！</p>
+    <div class="content">
+      <div class="content-message">
+        <h2 class="content-message-title upper">お気に入りの飲食店を登録しよう！</h2>
+        <p class="content-text">自分のお気に入りの店舗を登録して、地元のみんなとシェアしましょう！</p>
+        <i class="fas fa-glass-cheers"></i>
       </div>
-      <div class="store-link">
-        <%= link_to '飲食店を追加する！', new_store_path, class: 'store-btn' %>
+      <div class="content-link">
+        <%= link_to '飲食店を追加する！', new_store_path, class: 'content-btn' %>
       </div>
     </div>
-    <div class="community-content">
-      <div class="community-message">
-        <h2 class="community-message-title">近くの人と食を通して交流しよう！</h2>
-        <p class="community-text">地元の人達とチャット形式で交流できます、コミュニティの輪を広げよう！<p>
+    <div class="content">
+      <div class="content-message">
+        <h2 class="content-message-title">近くの人と食を通して交流しよう！</h2>
+        <p class="content-text">地元の人達とチャット形式で交流して、コミュニティの輪を広げよう！<p>
+        <i class="fas fa-users"></i>
       </div>
-      <div class="community-link">  
-        <%= link_to 'コミュニティ一覧ページへ！', communities_path, class: 'community-btn' %>
+      <div class="content-link">  
+        <%= link_to 'コミュニティ一覧ページへ！', communities_path, class: 'content-btn' %>
       </div>  
     </div>  
   </div>
