maps結合テスト実施（仮）

--- a/app/views/stores/search_map.js.erb
+++ b/app/views/stores/search_map.js.erb
@@ -10,7 +10,7 @@
     position: pos
   });
   let infoWindow = new google.maps.InfoWindow({
-  content: `<div class="mapinfo">
+  content: `<div class="map-info" id="map-info">
   <p>検索結果<p>
   <p><%= @address %></p>
   </div>`
