--- a/app/assets/stylesheets/messages/index.css
+++ b/app/assets/stylesheets/messages/index.css
@@ -103,8 +103,14 @@
   flex-wrap: wrap;
 }
 
+.message-image-box {
+  margin-right: 30px;
+}
+
 .message-image {
-  margin-right: 40px;
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
 }
 
 .message-form-field {
