--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -19,7 +19,7 @@
       <div class="community-form">
         <%= form_with model: @community, id: "community-form" do |f| %>
         <%= f.label :name, "コミュ二ティの名前", class: "form-label-name" %><span class="form-warning">必須</span>
-        <%= f.text_field :name, placeholder: "例: 渋谷駅周辺の居酒屋", class: "form-input-area", id: "community-input"%>
+        <%= f.text_field :name, placeholder: "20文字以内", class: "form-input-area", id: "community-input"%>
         <%= f.submit '作成する', class: "form-submit-btn" %>
         <% end %>
       </div>
