--- a/app/views/stores/_store_form.html.erb
+++ b/app/views/stores/_store_form.html.erb
@@ -4,7 +4,7 @@
   <%= form_with model: store, class: "form-wrap", local: true do |f| %>
     <div class="form-title">
       <%# stores/newの場合 %>
-      <% if params[:action] == "new" %>
+      <% if params[:action] == "new" || params[:action] == "create" %>
       <h2 class="form-title-name">お気に入りのお店を登録しよう！<h2>
       <%# stores/editの場合 %>
       <% else %>
@@ -14,7 +14,7 @@
     <%= render "shared/error_messages", model: f.object %>
     <div class="form-group">
       <div class="form-label">
-        <%= f.label :name, "飲食店の名前", class: "form-label-name" %><span class="form-warning">必須</span>
+        <%= f.label :name, "飲食店の名前", class: "form-label-name" %><span class="form-warning">必須(20文字以内)</span>
       </div> 
       <div class="form-input"> 
         <%= f.text_field :name, autofocus: true, placeholder: "例: 飲食店の名前", class: "form-input-area", id: "name" %>
@@ -30,7 +30,7 @@
     </div>
     <div class="form-group">
       <div class="form-label">
-        <%= f.label :url, "URL", class: "form-label-name" %><span class="form-any">任意</span>
+        <%= f.label :url, "URL", class: "form-label-name" %><span class="form-any">任意(httpかhttpsのみ)</span>
       </div> 
       <div class="form-input"> 
         <%= f.text_field :url, placeholder: "例: https://local-eating.herokuapp.com/", class: "form-input-area", id: "url" %>
@@ -54,7 +54,7 @@
     </div>
     <div class="form-group">
       <div class="form-label">
-        <%= f.label :info, "店舗情報", class: "form-label-name" %><span class="form-warning">必須</span>
+        <%= f.label :info, "店舗情報", class: "form-label-name" %><span class="form-warning">必須(400文字以内)</span>
       </div> 
       <div class="form-input"> 
         <%= f.text_area :info, placeholder: "例: 焼き鳥がおすすめ！", class: "form-text-area", id: "info" %>
@@ -62,14 +62,14 @@
     </div>
     <div class="form-group">
       <div class="form-label">
-        <%= f.label :store_images, "画像", class: "form-label-name" %><span class="form-any">任意(複数枚可）</span>
+        <%= f.label :store_images, "画像", class: "form-label-name" %><span class="form-any">任意(10枚まで）</span>
       </div> 
       <div class="form-input"> 
-        <%= f.file_field :store_images, multiple: true, class: "form-image-btn", id: "store_images" %>
+        <%= f.file_field :store_images,accept: 'image/jpg,image/jpeg,image/png,image/gif',  multiple: true, class: "form-image-btn", id: "store_images" %>
       </div>
     </div>
     <%# stores/newの場合 %>
-    <% if params[:action] == "new" %>
+    <% if params[:action] == "new" || params[:action] == "create" %>
     <div class="form-group">
       <div class="form-submit">
         <%= f.submit "店舗登録", class: "form-submit-btn" %>
@@ -85,7 +85,7 @@
         <% store.store_images.each do |store_image| %>
         <div class="check-box-image">
           <%= f.check_box :store_image_ids, {multiple: true}, store_image.id, false %>
-          <%= image_tag store_image.variant(resize: '250x250'), class: "check-box-image-content" %>
+          <%= image_tag store_image, class: "check-box-image-content" %>
         </div>  
         <% end %>
       </div>
