--- a/app/views/users/favorite.html.erb
+++ b/app/views/users/favorite.html.erb
@@ -3,21 +3,21 @@
   <div class="shared-main">
     <div class="user-favorite-map-wrapper">
       <div class="user-map-title">
-        <h2><%="#{current_user.nickname}さんのお気に入り店舗地図" %></h2>
+        <h2><%="#{current_user.nickname}さんのマイマップ" %></h2>
       </div>  
       <div id="user-map"></div>
       <script >let mapInstance</script>
     </div>    
     <div class="user-table-wrapper"> 
       <div class="user-table-title">
-        <h2><%= "#{current_user.nickname}さんのお気に入り店舗一覧" %></h2>
+        <h2><%= "#{current_user.nickname}さんの、お気に入り店舗一覧" %></h2>
       </div>
       <%= render partial: 'store_table', locals: {stores: @like_stores} %>
       <%= paginate @like_stores, param_name: 'like_page' %>
     </div>
     <div class="user-table-wrapper">
       <div class="user-table-title">
-        <h2><%= "#{current_user.nickname}さんのお気に入りコミュニティ一覧"%></h2>
+        <h2><%= "#{current_user.nickname}さんの、お気に入りコミュニティ一覧"%></h2>
       </div>
       <%= render partial: 'community_table', locals: {communities: @favorite_communities} %>
       <%= paginate @favorite_communities, param_name: 'favorite_page' %>
