--- a/app/views/devise/registrations/new_profile.html.erb
+++ b/app/views/devise/registrations/new_profile.html.erb
@@ -30,6 +30,14 @@
       </div>
     </div>
     <div class="form-group">
+      <div class="form-label">
+        <%= f.label :profile_image, "プロフィール画像", class: "form-label-name" %><span class="form-any">任意</span>
+      </div> 
+      <div class="form-input">
+        <%= f.file_field :profile_image, accept: 'image/jpg,image/jpeg,image/png', class: "form-image-btn", id: "profile_image" %>
+      </div>
+    </div>
+    <div class="form-group">
       <div class="form-submit">
         <%= f.submit "新規登録", class: "form-submit-btn" %>
       </div>
