--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -29,6 +29,14 @@
           <%= f.collection_select :sex_id, Sex.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select-btn", id: "sex-id" %>
         </div>
       </div>
+    <div class="form-group">
+      <div class="form-label">
+        <%= f.label :profile_image, "プロフィール画像", class: "form-label-name" %><span class="form-any">任意</span>
+      </div> 
+      <div class="form-input">
+        <%= f.file_field :profile_image, accept: 'image/jpg,image/jpeg,image/png', class: "form-image-btn", id: "profile_image" %>
+      </div>
+    </div>      
       <div class="form-group">
         <div class="form-submit">
           <%= f.submit "編集する", class: "form-submit-btn" %>
