--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,6 +5,7 @@
   <div class="header-links">
     <%# ログイン時表示%>
     <% if user_signed_in? %>
+      <%= image_tag current_user.profile.profile_image, class: "profile-image" %>
       <%= link_to "#{current_user.nickname}さんのマイページ", user_path(current_user), class:'header-link'%>
       <%= link_to "お気に入りリスト", favorite_user_path(current_user), class:'header-link'%>           
       <%= link_to 'ログアウト', destroy_user_session_path, method: :delete,  class: 'header-link' %>
